apps/unifi/unifi/unifi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: unifi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k3s-worker-0
      containers:
      - name: unifi
        image: ghcr.io/linuxserver/unifi-network-application:8.3.32@sha256:d4b50e615682037c32361b7ec348b1670e44b9cb0c5b52e80253b186e0db6c94
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8880
          protocol: TCP
        - containerPort: 8843
        volumeMounts:
          - mountPath: /config
            name: unifi-data
        resources:
          requests:
            memory: 1200Mi
            cpu: "20m"
          limits:
            memory: 1200Mi
        livenessProbe: &probe
          httpGet:
            path: /manage/account/login
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 60
          timeoutSeconds: 3
        readinessProbe: *probe
      volumes:
      - name: unifi-data
        persistentVolumeClaim:
          claimName: unifi-pvc
