apps/unifi/unifi/unifi-tlsroute.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: unifi
  namespace: unifi
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: unifi-tls
  hostnames:
  - "unifi.mgmt.<path:vaults/Kubernetes/items/cluster#domain>"
  rules:
  - backendRefs:
    - name: unifi-service
      namespace: unifi
      port: 8443
